--- a/PropertyManagement-project/package.json
+++ b/PropertyManagement-project/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.18.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -68,6 +69,7 @@
     "redux-form": "^7.4.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "thunk": "0.0.1",
     "url-loader": "^0.5.9",
     "webpack": "^3.1.0",
     "webpack-merge": "^4.1.0"
